tools/mm/cpp.re.cpp
/* Generated by re2c 0.13.5 on Fri Jan 08 15:08:55 2010 */
#line 1 "cpp.re"
/*=============================================================================
    Boost.Wave: A Standard compliant C++ preprocessor library

    Copyright (c) 2001 Daniel C. Nuffer
    Copyright (c) 2001-2009 Hartmut Kaiser. 
    Distributed under the Boost Software License, Version 1.0. (See accompanying 
    file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

    This is a lexer conforming to the Standard with a few exceptions.
    So it does allow the '$' to be part of identifiers. If you need strict 
    Standards conforming behaviour, please include the lexer definition 
    provided in the file strict_cpp.re.

    TODO: 
        handle errors better.
=============================================================================*/

#line 41 "cpp.re"



#line 25 "<stdout>"
{
    YYCTYPE yych;
    unsigned int yyaccept = 0;

    yych = *YYCURSOR;
    switch (yych) {
    case 0x00:    goto yy88;
    case 0x01:
    case 0x02:
    case 0x03:
    case 0x04:
    case 0x05:
    case 0x06:
    case 0x07:
    case 0x08:
    case 0x0E:
    case 0x0F:
    case 0x10:
    case 0x11:
    case 0x12:
    case 0x13:
    case 0x14:
    case 0x15:
    case 0x16:
    case 0x17:
    case 0x18:
    case 0x19:
    case 0x1A:
    case 0x1B:
    case 0x1C:
    case 0x1D:
    case 0x1E:
    case 0x1F:    goto yy91;
    case '\t':
    case '\v':
    case '\f':    goto yy82;
    case '\n':    goto yy85;
    case '\r':    goto yy87;
    case ' ':    goto yy84;
    case '!':    goto yy68;
    case '"':    goto yy81;
    case '#':    goto yy45;
    case '$':
    case 'A':
    case 'B':
    case 'C':
    case 'D':
    case 'E':
    case 'F':
    case 'G':
    case 'H':
    case 'I':
    case 'J':
    case 'K':
    case 'N':
    case 'O':
    case 'P':
    case 'Q':
    case 'R':
    case 'S':
    case 'T':
    case 'U':
    case 'V':
    case 'W':
    case 'X':
    case 'Y':
    case 'Z':
    case '_':
    case 'h':
    case 'j':
    case 'k':
    case 'q':
    case 'y':
    case 'z':    goto yy76;
    case '%':    goto yy37;
    case '&':    goto yy62;
    case '\'':    goto yy80;
    case '(':    goto yy47;
    case ')':    goto yy49;
    case '*':    goto yy57;
    case '+':    goto yy53;
    case ',':    goto yy74;
    case '-':    goto yy55;
    case '.':    goto yy4;
    case '/':    goto yy2;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9':    goto yy6;
    case ':':    goto yy43;
    case ';':    goto yy51;
    case '<':    goto yy33;
    case '=':    goto yy70;
    case '>':    goto yy72;
    case '?':    goto yy31;
    case 'L':    goto yy77;
    case 'M':    goto yy19;
    case '[':    goto yy39;
    case '\\':    goto yy78;
    case ']':    goto yy41;
    case '^':    goto yy59;
    case 'a':    goto yy8;
    case 'b':    goto yy10;
    case 'c':    goto yy11;
    case 'd':    goto yy12;
    case 'e':    goto yy13;
    case 'f':    goto yy14;
    case 'g':    goto yy15;
    case 'i':    goto yy16;
    case 'l':    goto yy17;
    case 'm':    goto yy18;
    case 'n':    goto yy20;
    case 'o':    goto yy21;
    case 'p':    goto yy22;
    case 'r':    goto yy23;
    case 's':    goto yy24;
    case 't':    goto yy25;
    case 'u':    goto yy26;
    case 'v':    goto yy27;
    case 'w':    goto yy28;
    case 'x':    goto yy61;
    case '{':    goto yy29;
    case '|':    goto yy64;
    case '}':    goto yy35;
    case '~':    goto yy66;
    default:    goto yy90;
    }
yy2:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '*':    goto yy854;
    case '/':    goto yy852;
    case '=':    goto yy850;
    default:    goto yy3;
    }
yy3:
#line 165 "cpp.re"
    { BOOST_WAVE_RET(T_DIVIDE); }
#line 170 "<stdout>"
yy4:
    yyaccept = 0;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case '*':    goto yy844;
    case '.':    goto yy846;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9':    goto yy847;
    default:    goto yy5;
    }
yy5:
#line 151 "cpp.re"
    { BOOST_WAVE_RET(T_DOT); }
#line 192 "<stdout>"
yy6:
    ++YYCURSOR;
yy7:
#line 46 "cpp.re"
    { goto pp_number; }
#line 198 "<stdout>"
yy8:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'n':    goto yy830;
    case 's':    goto yy831;
    case 'u':    goto yy832;
    default:    goto yy195;
    }
yy9:
#line 230 "cpp.re"
    { BOOST_WAVE_RET(T_IDENTIFIER); }
#line 211 "<stdout>"
yy10:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'i':    goto yy812;
    case 'o':    goto yy813;
    case 'r':    goto yy814;
    default:    goto yy195;
    }
yy11:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'a':    goto yy774;
    case 'h':    goto yy775;
    case 'l':    goto yy776;
    case 'o':    goto yy777;
    default:    goto yy195;
    }
yy12:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'e':    goto yy743;
    case 'o':    goto yy744;
    case 'y':    goto yy746;
    default:    goto yy195;
    }
yy13:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'l':    goto yy718;
    case 'n':    goto yy719;
    case 'x':    goto yy720;
    default:    goto yy195;
    }
yy14:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'a':    goto yy699;
    case 'l':    goto yy700;
    case 'o':    goto yy701;
    case 'r':    goto yy702;
    default:    goto yy195;
    }
yy15:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'o':    goto yy695;
    default:    goto yy195;
    }
yy16:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'f':    goto yy685;
    case 'n':    goto yy687;
    default:    goto yy195;
    }
yy17:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'o':    goto yy681;
    default:    goto yy195;
    }
yy18:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'u':    goto yy674;
    default:    goto yy195;
    }
yy19:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'M':    goto yy647;
    default:    goto yy195;
    }
yy20:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'a':    goto yy628;
    case 'e':    goto yy629;
    case 'o':    goto yy630;
    default:    goto yy195;
    }
yy21:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'p':    goto yy614;
    case 'r':    goto yy615;
    default:    goto yy195;
    }
yy22:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'r':    goto yy593;
    case 'u':    goto yy594;
    default:    goto yy195;
    }
yy23:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'e':    goto yy565;
    default:    goto yy195;
    }
yy24:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'h':    goto yy526;
    case 'i':    goto yy527;
    case 't':    goto yy528;
    case 'w':    goto yy529;
    default:    goto yy195;
    }
yy25:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'e':    goto yy489;
    case 'h':    goto yy490;
    case 'r':    goto yy491;
    case 'y':    goto yy492;
    default:    goto yy195;
    }
yy26:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'n':    goto yy472;
    case 's':    goto yy473;
    default:    goto yy195;
    }
yy27:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'i':    goto yy454;
    case 'o':    goto yy455;
    default:    goto yy195;
    }
yy28:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'c':    goto yy442;
    case 'h':    goto yy443;
    default:    goto yy195;
    }
yy29:
    ++YYCURSOR;
#line 115 "cpp.re"
    { BOOST_WAVE_RET(T_LEFTBRACE); }
#line 375 "<stdout>"
yy31:
    yyaccept = 2;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case '?':    goto yy407;
    default:    goto yy32;
    }
yy32:
#line 140 "cpp.re"
    { BOOST_WAVE_RET(T_QUESTION_MARK); }
#line 386 "<stdout>"
yy33:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '%':    goto yy403;
    case ':':    goto yy401;
    case '<':    goto yy399;
    case '=':    goto yy397;
    default:    goto yy34;
    }
yy34:
#line 181 "cpp.re"
    { BOOST_WAVE_RET(T_LESS); }
#line 399 "<stdout>"
yy35:
    ++YYCURSOR;
#line 118 "cpp.re"
    { BOOST_WAVE_RET(T_RIGHTBRACE); }
#line 404 "<stdout>"
yy37:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case ':':    goto yy388;
    case '=':    goto yy390;
    case '>':    goto yy392;
    default:    goto yy38;
    }
yy38:
#line 166 "cpp.re"
    { BOOST_WAVE_RET(T_PERCENT); }
#line 416 "<stdout>"
yy39:
    ++YYCURSOR;
#line 121 "cpp.re"
    { BOOST_WAVE_RET(T_LEFTBRACKET); }
#line 421 "<stdout>"
yy41:
    ++YYCURSOR;
#line 124 "cpp.re"
    { BOOST_WAVE_RET(T_RIGHTBRACKET); }
#line 426 "<stdout>"
yy43:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case ':':    goto yy384;
    case '>':    goto yy386;
    default:    goto yy44;
    }
yy44:
#line 138 "cpp.re"
    { BOOST_WAVE_RET(T_COLON); }
#line 437 "<stdout>"
yy45:
    yyaccept = 3;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ':
    case '/':
    case 'd':
    case 'e':
    case 'i':
    case 'l':
    case 'p':
    case 'r':
    case 'u':
    case 'w':    goto yy261;
    case '#':    goto yy272;
    case '?':    goto yy271;
    default:    goto yy46;
    }
yy46:
#line 127 "cpp.re"
    { BOOST_WAVE_RET(T_POUND); }
#line 462 "<stdout>"
yy47:
    ++YYCURSOR;
#line 135 "cpp.re"
    { BOOST_WAVE_RET(T_LEFTPAREN); }
#line 467 "<stdout>"
yy49:
    ++YYCURSOR;
#line 136 "cpp.re"
    { BOOST_WAVE_RET(T_RIGHTPAREN); }
#line 472 "<stdout>"
yy51:
    ++YYCURSOR;
#line 137 "cpp.re"
    { BOOST_WAVE_RET(T_SEMICOLON); }
#line 477 "<stdout>"
yy53:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '+':    goto yy256;
    case '=':    goto yy258;
    default:    goto yy54;
    }
yy54:
#line 162 "cpp.re"
    { BOOST_WAVE_RET(T_PLUS); }
#line 488 "<stdout>"
yy55:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '-':    goto yy250;
    case '=':    goto yy252;
    case '>':    goto yy248;
    default:    goto yy56;
    }
yy56:
#line 163 "cpp.re"
    { BOOST_WAVE_RET(T_MINUS); }
#line 500 "<stdout>"
yy57:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '=':    goto yy246;
    default:    goto yy58;
    }
yy58:
#line 164 "cpp.re"
    { BOOST_WAVE_RET(T_STAR); }
#line 510 "<stdout>"
yy59:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '=':    goto yy244;
    default:    goto yy60;
    }
yy60:
#line 167 "cpp.re"
    { BOOST_WAVE_RET(T_XOR); }
#line 520 "<stdout>"
yy61:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case 'o':    goto yy237;
    default:    goto yy195;
    }
yy62:
    ++YYCURSOR;
    switch ((yych = *YYCURSOR)) {
    case '&':    goto yy233;
    case '=':    goto yy235;
    default:    goto yy63;
    }
yy63:
#line 170 "cpp.re"
    { BOOST_WAVE_RET(T_AND); }
#line 538 "<stdout>"
yy64:
    yyaccept = 4;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
    case '=':    goto yy228;
    case '?':    goto yy225;
    case '|':    goto yy226;
    default:    goto yy65;
